# 03-arvit-robot-control

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wendy.json
arvit_robot_control/: __init__.py
arvit_robot_control/slam/: __init__.py  extrinsics.py  timesync.py
config/: ekf_two_ekf.yaml  unilidar_l1.yaml
launch/: slam_bringup.launch.py
scripts/: container-down.sh  container-up.sh
tests/: test_extrinsics.py  test_timesync.py
